# ReconFlow-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py
app/: api.py  main.py
app/env/: environment.py  graders.py  models.py  rewards.py  scenarios.py  scoring_utils.py  state_machine.py
data/: easy_cases.json  hard_cases.json  medium_cases.json
server/: app.py
tests/: test_env.py
